[package]
name = "salon"
edition = "2024"
license = "MIT"
publish = false

[dependencies.chrono]
version = "0.4.43"
default-features = false
features = ["std", "serde"]

[dependencies.serde]
version = "1.0.228"
features = ["derive"]

[dependencies]
serde_json = "1.0.149"

[dev-dependencies]
tempfile = "3.24.0"
